# DSA-cpp-projects

EighthSemProject/: CMakeLists.txt
EighthSemProject/include/: WF.h  WFOpt.h
EighthSemProject/src/: CMakeLists.txt  WF.cpp  WFOpt.cpp  main.cpp
FifthSemProject/: CMakeLists.txt
FifthSemProject/include/: Aggregate.hpp  AggregateT.hpp  Child.hpp  Test.hpp
FifthSemProject/src/: Aggregate.cpp  CMakeLists.txt  Child.cpp  Test.cpp  main.cpp
FinalProject/: .gitignore  CMakeLists.txt  main.cpp  test.json
FinalProject/models/: Address.cpp  Address.h  BankCard.cpp  BankCard.h  Client.cpp  Client.h  Data.cpp  Data.h  Hotel.cpp  Hotel.h  Place.cpp  Place.h  Room.cpp  Room.h  Route.cpp  Route.h  Schedule.cpp  Schedule.h  ScheduleEvent.cpp  ScheduleEvent.h  Tour.cpp  Tour.h  User.cpp  User.h
FinalProject/models/enums/: Climate.h  PlaceTypes.h  RoomTypes.h  TourStatuses.h
FinalProject/resources/: cities.json  countries.json  hotels.json  routes.json  tours.json  users.json
FinalProject/services/: Singleton.cpp  Singleton.h
FinalProject/services/managers/: HotelManager.cpp  HotelManager.h  PlaceManager.cpp  PlaceManager.h  ResourceManager.cpp  ResourceManager.h  RouteManager.cpp  RouteManager.h  TourManager.cpp  TourManager.h  UserManager.cpp  UserManager.h
FinalProject/ui/components/: AddressCreatorWidget.cpp  AddressCreatorWidget.h  BaseFilterWidget.cpp  BaseFilterWidget.h  HotelsFilterWidget.cpp  HotelsFilterWidget.h  MainMenubar.cpp  MainMenubar.h  PlacesFilterWidget.cpp  PlacesFilterWidget.h  TabBarPage.cpp  TabBarPage.h  UsersFilterWidget.cpp  UsersFilterWidget.h
FinalProject/ui/dialogs/: CreateHotelDialog.cpp  CreateHotelDialog.h  CreatePlaceDialog.cpp  CreatePlaceDialog.h  CreateRouteDialog.cpp  CreateRouteDialog.h  CreateTourDialog.cpp  CreateTourDialog.h  CreateUserDialog.cpp  CreateUserDialog.h
FinalProject/ui/models/: HotelProxyModel.cpp  HotelProxyModel.h  HotelsTableModel.cpp  HotelsTableModel.h  PlaceProxyModel.cpp  PlaceProxyModel.h  PlacesTableModel.cpp  PlacesTableModel.h  RoutesTableModel.cpp  RoutesTableModel.h  ToursTableModel.cpp  ToursTableModel.h  UsersTableModel.cpp  UsersTableModel.h
FinalProject/ui/models/tables/: BaseTableModel.cpp  BaseTableModel.h  HotelsTableModel.h  PlacesTableModel.cpp  PlacesTableModel.h  UsersTableModel.cpp
FinalProject/ui/models/trees/: RoutesTreeModel.cpp  RoutesTreeModel.h  TreeItem.cpp  TreeItem.h
FinalProject/ui/views/: BaseTableView.cpp  BaseTableView.h  HotelTableView.cpp  HotelTableView.h  HotelsTableView.cpp  HotelsTableView.h  PlaceTableView.cpp  PlaceTableView.h  PlacesTableView.cpp  PlacesTableView.h  RoutesTableView.cpp  RoutesTableView.h  ToursTableView.cpp  ToursTableView.h  UserTableView.cpp  UserTableView.h  UsersTableView.cpp  UsersTableView.h
FinalProject/ui/windows/: MainWindow.cpp  MainWindow.h
FirstSemProject/: CMakeLists.txt
FirstSemProject/src/: CMakeLists.txt  StringExplorer.cpp  StringExplorer.hpp  main.cpp
FirstSemProject/tst/: CMakeLists.txt  StringExplorer-test.cpp
FourthSemProject/include/: Str.h
FourthSemProject/src/: main.cpp
FourthSemProject/tst/: Str_tst.cpp
SecondSemProject/: CMakeLists.txt
SecondSemProject/include/: Array.hpp  Pointer.hpp  Strings.hpp
SecondSemProject/src/: Array.cpp  CMakeLists.txt  Pointer.cpp  Strings.cpp
SecondSemProject/tst/: CMakeLists.txt
SeventhBProject/: CMakeLists.txt
SeventhBProject/include/: Test.h
SeventhBProject/src/: CMakeLists.txt  main.cpp
SeventhSemProject/: CMakeLists.txt
SeventhSemProject/include/: MySet.h  MyUnorderedSet.h
SeventhSemProject/src/: main.cpp
SixthAProject/: CMakeLists.txt
SixthBSemProject/: CMakeLists.txt
ThirdSemProject/: CMakeLists.txt
(+11 files in other folders)
